# GenMM

./: .gitignore  Dockerfile  compose.yaml  pyproject.toml
