[tool.poetry]
name = "genmm"
version = "0.0.1"
description = "Example-based Motion Synthesis via Generative Motion Matching, ACM Transactions on Graphics"
authors = ["Mochineko <t.o.e.4315@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = {version = "^2.0.1+cu118", source = "pytorch"}
tensorboardx = "^2.6.2.2"
tqdm = "^4.66.1"
unfoldnd = "^0.2.0"
pyyaml = "^6.0.1"
gradio = "^3.42.0"
torchvision = {version = "^0.15.2+cu118", source = "pytorch"}
imageio = "^2.31.3"

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

